test_suite5/ALAN/test_suite/alan-2022-examples/failing/001360_mutation.alan
source xW begin call q(> 61) end
